--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fontawesome": "^4.7.2",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
+    "mongoose": "^5.3.15",
     "nodemailer": "^4.6.7",
     "popper.js": "^1.14.3",
     "sitemap": "^2.0.1"
